--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-     "vercel-build": "npm install && npm run build",
+    "build": "echo 'No build step needed' ",
+    "vercel-build": "npm install && npm run build",
     "dev": "node server.js"
   },
   "dependencies": {
