--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=5000
-MONGODB_URI=MONGODB_URI=mongodb+srv://sammy:sammy14102005@cluster0.td9at.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://sammy:sammy14102005@cluster0.td9at.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0
 JWT_SECRET=shifa_secret_key
