--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "build": "echo 'No build step needed' ",
+    "build": "npm i",
     "vercel-build": "npm install && npm run build",
     "dev": "node server.js"
   },
